--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,23 @@
 #
 #    pip-compile --output-file=requirements.txt pyproject.toml
 #
+aiohttp==3.9.2
+    # via
+    #   langchain
+    #   langchain-community
+aiosignal==1.3.1
+    # via aiohttp
 annotated-types==0.6.0
     # via pydantic
 anyio==4.2.0
     # via
+    #   langchain-core
     #   starlette
     #   watchfiles
 asgiref==3.7.2
     # via opentelemetry-instrumentation-asgi
+attrs==23.2.0
+    # via aiohttp
 backoff==2.2.1
     # via
     #   opentelemetry-exporter-otlp-proto-common
@@ -36,10 +45,15 @@ chromadb==0.4.22
     # via leapfrogai-backend-chromadb (pyproject.toml)
 click==8.1.7
     # via
+    #   nltk
     #   typer
     #   uvicorn
 coloredlogs==15.0.1
     # via onnxruntime
+dataclasses-json==0.6.3
+    # via
+    #   langchain
+    #   langchain-community
 deprecated==1.2.14
     # via
     #   opentelemetry-api
@@ -47,11 +61,20 @@ deprecated==1.2.14
 fastapi==0.109.0
     # via chromadb
 filelock==3.13.1
-    # via huggingface-hub
+    # via
+    #   huggingface-hub
+    #   torch
+    #   transformers
 flatbuffers==23.5.26
     # via onnxruntime
+frozenlist==1.4.1
+    # via
+    #   aiohttp
+    #   aiosignal
 fsspec==2023.12.2
-    # via huggingface-hub
+    # via
+    #   huggingface-hub
+    #   torch
 google-auth==2.27.0
     # via kubernetes
 googleapis-common-protos==1.62.0
@@ -65,30 +88,79 @@ h11==0.14.0
 httptools==0.6.1
     # via uvicorn
 huggingface-hub==0.20.3
-    # via tokenizers
+    # via
+    #   sentence-transformers
+    #   tokenizers
+    #   transformers
 humanfriendly==10.0
     # via coloredlogs
 idna==3.6
     # via
     #   anyio
     #   requests
+    #   yarl
 importlib-metadata==6.11.0
     # via opentelemetry-api
 importlib-resources==6.1.1
     # via chromadb
+jinja2==3.1.3
+    # via torch
+joblib==1.3.2
+    # via
+    #   nltk
+    #   scikit-learn
+jsonpatch==1.33
+    # via
+    #   langchain
+    #   langchain-core
+jsonpointer==2.4
+    # via jsonpatch
 kubernetes==29.0.0
     # via chromadb
+langchain==0.1.4
+    # via leapfrogai-backend-chromadb (pyproject.toml)
+langchain-community==0.0.16
+    # via langchain
+langchain-core==0.1.16
+    # via
+    #   langchain
+    #   langchain-community
+langsmith==0.0.84
+    # via
+    #   langchain
+    #   langchain-community
+    #   langchain-core
+markupsafe==2.1.4
+    # via jinja2
+marshmallow==3.20.2
+    # via dataclasses-json
 mmh3==4.1.0
     # via chromadb
 monotonic==1.6
     # via posthog
 mpmath==1.3.0
     # via sympy
+multidict==6.0.4
+    # via
+    #   aiohttp
+    #   yarl
+mypy-extensions==1.0.0
+    # via typing-inspect
+networkx==3.2.1
+    # via torch
+nltk==3.8.1
+    # via sentence-transformers
 numpy==1.26.3
     # via
     #   chroma-hnswlib
     #   chromadb
+    #   langchain
+    #   langchain-community
     #   onnxruntime
+    #   scikit-learn
+    #   scipy
+    #   sentence-transformers
+    #   transformers
 oauthlib==3.2.2
     # via
     #   kubernetes
@@ -132,13 +204,18 @@ opentelemetry-util-http==0.43b0
     # via
     #   opentelemetry-instrumentation-asgi
     #   opentelemetry-instrumentation-fastapi
-overrides==7.6.0
+overrides==7.7.0
     # via chromadb
 packaging==23.2
     # via
     #   build
     #   huggingface-hub
+    #   langchain-core
+    #   marshmallow
     #   onnxruntime
+    #   transformers
+pillow==10.2.0
+    # via sentence-transformers
 posthog==3.3.3
     # via chromadb
 protobuf==4.25.2
@@ -154,12 +231,17 @@ pyasn1==0.5.1
     #   rsa
 pyasn1-modules==0.3.0
     # via google-auth
-pydantic==2.5.3
+pydantic==2.6.0
     # via
     #   chromadb
     #   fastapi
-pydantic-core==2.14.6
+    #   langchain
+    #   langchain-core
+    #   langsmith
+pydantic-core==2.16.1
     # via pydantic
+pypdf==4.0.1
+    # via leapfrogai-backend-chromadb (pyproject.toml)
 pypika==0.48.9
     # via chromadb
 pyproject-hooks==1.0.0
@@ -170,23 +252,52 @@ python-dateutil==2.8.2
     #   posthog
 python-dotenv==1.0.1
     # via uvicorn
+python-multipart==0.0.6
+    # via leapfrogai-backend-chromadb (pyproject.toml)
 pyyaml==6.0.1
     # via
     #   chromadb
     #   huggingface-hub
     #   kubernetes
+    #   langchain
+    #   langchain-community
+    #   langchain-core
+    #   transformers
     #   uvicorn
+regex==2023.12.25
+    # via
+    #   nltk
+    #   tiktoken
+    #   transformers
 requests==2.31.0
     # via
     #   chromadb
     #   huggingface-hub
     #   kubernetes
+    #   langchain
+    #   langchain-community
+    #   langchain-core
+    #   langsmith
     #   posthog
     #   requests-oauthlib
+    #   tiktoken
+    #   transformers
 requests-oauthlib==1.3.1
     # via kubernetes
 rsa==4.9
     # via google-auth
+safetensors==0.4.2
+    # via transformers
+scikit-learn==1.4.0
+    # via sentence-transformers
+scipy==1.12.0
+    # via
+    #   scikit-learn
+    #   sentence-transformers
+sentence-transformers==2.3.0
+    # via leapfrogai-backend-chromadb (pyproject.toml)
+sentencepiece==0.1.99
+    # via sentence-transformers
 six==1.16.0
     # via
     #   kubernetes
@@ -194,18 +305,41 @@ six==1.16.0
     #   python-dateutil
 sniffio==1.3.0
     # via anyio
+sqlalchemy==2.0.25
+    # via
+    #   langchain
+    #   langchain-community
 starlette==0.35.1
     # via fastapi
 sympy==1.12
-    # via onnxruntime
+    # via
+    #   onnxruntime
+    #   torch
 tenacity==8.2.3
-    # via chromadb
+    # via
+    #   chromadb
+    #   langchain
+    #   langchain-community
+    #   langchain-core
+threadpoolctl==3.2.0
+    # via scikit-learn
+tiktoken==0.5.2
+    # via leapfrogai-backend-chromadb (pyproject.toml)
 tokenizers==0.15.1
-    # via chromadb
+    # via
+    #   chromadb
+    #   transformers
+torch==2.1.2
+    # via sentence-transformers
 tqdm==4.66.1
     # via
     #   chromadb
     #   huggingface-hub
+    #   nltk
+    #   sentence-transformers
+    #   transformers
+transformers==4.37.2
+    # via sentence-transformers
 typer==0.9.0
     # via chromadb
 typing-extensions==4.9.0
@@ -216,12 +350,17 @@ typing-extensions==4.9.0
     #   opentelemetry-sdk
     #   pydantic
     #   pydantic-core
+    #   sqlalchemy
+    #   torch
     #   typer
+    #   typing-inspect
+typing-inspect==0.9.0
+    # via dataclasses-json
 urllib3==2.1.0
     # via
     #   kubernetes
     #   requests
-uvicorn[standard]==0.27.0
+uvicorn[standard]==0.27.0.post1
     # via
     #   chromadb
     #   leapfrogai-backend-chromadb (pyproject.toml)
@@ -237,6 +376,8 @@ wrapt==1.16.0
     # via
     #   deprecated
     #   opentelemetry-instrumentation
+yarl==1.9.4
+    # via aiohttp
 zipp==3.17.0
     # via importlib-metadata
 
