--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,7 @@ dependencies = [
     "langchain>=0.1.4",
     "sentence-transformers>=2.3.0",
     "tiktoken>=0.5.2",
-    "pypdf>=4.0.1"
+    "pypdf>=4.0.1",
+    "llama-index>=0.9.39",
+    "python-dotenv>=1.0.1"
 ]
