--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "leapfrogai-backend-chromadb"
+name = "leapfrogai-backend-rag"
 version = "0.1.0"
-description = "LeapfrogAI backend for ChromaDB"
+description = "LeapfrogAI backend for Retrieval Augmented Generation (RAG)"
 authors = [{ name = "LeapfrogAI Authors", email = "ai@defenseunicorns.com" }]
 license = { file = "LICENSE" }
 readme = "README.md"
@@ -17,5 +17,5 @@ dependencies = [
     "tiktoken>=0.5.2",
     "pypdf>=4.0.1",
     "llama-index>=0.9.39",
-    "python-dotenv>=1.0.1"
+    "python-dotenv>=1.0.1",
 ]
