--- a/requirements.txt
+++ b/requirements.txt
@@ -74,7 +74,6 @@ filelock==3.13.1
     #   huggingface-hub
     #   torch
     #   transformers
-    #   triton
 flatbuffers==23.5.26
     # via onnxruntime
 frozenlist==1.4.1
@@ -142,7 +141,9 @@ kubernetes==29.0.0
 langchain==0.1.4
     # via leapfrogai-backend-rag (pyproject.toml)
 langchain-community==0.0.16
-    # via langchain
+    # via
+    #   langchain
+    #   leapfrogai-backend-rag (pyproject.toml)
 langchain-core==0.1.16
     # via
     #   langchain
@@ -193,37 +194,6 @@ numpy==1.26.3
     #   scipy
     #   sentence-transformers
     #   transformers
-nvidia-cublas-cu12==12.1.3.1
-    # via
-    #   nvidia-cudnn-cu12
-    #   nvidia-cusolver-cu12
-    #   torch
-nvidia-cuda-cupti-cu12==12.1.105
-    # via torch
-nvidia-cuda-nvrtc-cu12==12.1.105
-    # via torch
-nvidia-cuda-runtime-cu12==12.1.105
-    # via torch
-nvidia-cudnn-cu12==8.9.2.26
-    # via torch
-nvidia-cufft-cu12==11.0.2.54
-    # via torch
-nvidia-curand-cu12==10.3.2.106
-    # via torch
-nvidia-cusolver-cu12==11.4.5.107
-    # via torch
-nvidia-cusparse-cu12==12.1.0.106
-    # via
-    #   nvidia-cusolver-cu12
-    #   torch
-nvidia-nccl-cu12==2.18.1
-    # via torch
-nvidia-nvjitlink-cu12==12.3.101
-    # via
-    #   nvidia-cusolver-cu12
-    #   nvidia-cusparse-cu12
-nvidia-nvtx-cu12==12.1.105
-    # via torch
 oauthlib==3.2.2
     # via
     #   kubernetes
@@ -422,8 +392,6 @@ tqdm==4.66.1
     #   transformers
 transformers==4.37.2
     # via sentence-transformers
-triton==2.1.0
-    # via torch
 typer==0.9.0
     # via chromadb
 typing-extensions==4.9.0
