--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,14 +4,26 @@
 #
 #    pip-compile --extra=dev --output-file=requirements-dev.txt pyproject.toml
 #
+aiohttp==3.9.3
+    # via
+    #   langchain
+    #   langchain-community
+    #   llama-index
+aiosignal==1.3.1
+    # via aiohttp
 annotated-types==0.6.0
     # via pydantic
 anyio==4.2.0
     # via
+    #   httpx
+    #   langchain-core
+    #   openai
     #   starlette
     #   watchfiles
 asgiref==3.7.2
     # via opentelemetry-instrumentation-asgi
+attrs==23.2.0
+    # via aiohttp
 backoff==2.2.1
     # via
     #   opentelemetry-exporter-otlp-proto-common
@@ -25,6 +37,8 @@ cachetools==5.3.2
     # via google-auth
 certifi==2023.11.17
     # via
+    #   httpcore
+    #   httpx
     #   kubernetes
     #   pulsar-client
     #   requests
@@ -33,68 +47,163 @@ charset-normalizer==3.3.2
 chroma-hnswlib==0.7.3
     # via chromadb
 chromadb==0.4.22
-    # via leapfrogai-backend-chromadb (pyproject.toml)
+    # via leapfrogai-backend-rag (pyproject.toml)
 click==8.1.7
     # via
+    #   nltk
     #   typer
     #   uvicorn
 coloredlogs==15.0.1
     # via onnxruntime
+dataclasses-json==0.6.3
+    # via
+    #   langchain
+    #   langchain-community
+    #   llama-index
 deprecated==1.2.14
     # via
+    #   llama-index
     #   opentelemetry-api
     #   opentelemetry-exporter-otlp-proto-grpc
+dirtyjson==1.0.8
+    # via llama-index
+distro==1.9.0
+    # via openai
 fastapi==0.109.0
     # via chromadb
 filelock==3.13.1
-    # via huggingface-hub
+    # via
+    #   huggingface-hub
+    #   torch
+    #   transformers
 flatbuffers==23.5.26
     # via onnxruntime
+frozenlist==1.4.1
+    # via
+    #   aiohttp
+    #   aiosignal
 fsspec==2023.12.2
-    # via huggingface-hub
+    # via
+    #   huggingface-hub
+    #   llama-index
+    #   torch
 google-auth==2.27.0
     # via kubernetes
 googleapis-common-protos==1.62.0
     # via opentelemetry-exporter-otlp-proto-grpc
+greenlet==3.0.3
+    # via sqlalchemy
 grpcio==1.60.0
     # via
     #   chromadb
     #   opentelemetry-exporter-otlp-proto-grpc
 h11==0.14.0
-    # via uvicorn
+    # via
+    #   httpcore
+    #   uvicorn
+httpcore==1.0.2
+    # via httpx
 httptools==0.6.1
     # via uvicorn
+httpx==0.26.0
+    # via
+    #   llama-index
+    #   openai
 huggingface-hub==0.20.3
-    # via tokenizers
+    # via
+    #   sentence-transformers
+    #   tokenizers
+    #   transformers
 humanfriendly==10.0
     # via coloredlogs
 idna==3.6
     # via
     #   anyio
+    #   httpx
     #   requests
+    #   yarl
 importlib-metadata==6.11.0
     # via opentelemetry-api
 importlib-resources==6.1.1
     # via chromadb
+jinja2==3.1.3
+    # via torch
+joblib==1.3.2
+    # via
+    #   nltk
+    #   scikit-learn
+jsonpatch==1.33
+    # via
+    #   langchain
+    #   langchain-core
+jsonpointer==2.4
+    # via jsonpatch
 kubernetes==29.0.0
     # via chromadb
+langchain==0.1.4
+    # via leapfrogai-backend-rag (pyproject.toml)
+langchain-community==0.0.16
+    # via
+    #   langchain
+    #   leapfrogai-backend-rag (pyproject.toml)
+langchain-core==0.1.17
+    # via
+    #   langchain
+    #   langchain-community
+langsmith==0.0.84
+    # via
+    #   langchain
+    #   langchain-community
+    #   langchain-core
+llama-index==0.9.40
+    # via leapfrogai-backend-rag (pyproject.toml)
+markupsafe==2.1.4
+    # via jinja2
+marshmallow==3.20.2
+    # via dataclasses-json
 mmh3==4.1.0
     # via chromadb
 monotonic==1.6
     # via posthog
 mpmath==1.3.0
     # via sympy
+multidict==6.0.4
+    # via
+    #   aiohttp
+    #   yarl
+mypy-extensions==1.0.0
+    # via typing-inspect
+nest-asyncio==1.6.0
+    # via llama-index
+networkx==3.2.1
+    # via
+    #   llama-index
+    #   torch
+nltk==3.8.1
+    # via
+    #   llama-index
+    #   sentence-transformers
 numpy==1.26.3
     # via
     #   chroma-hnswlib
     #   chromadb
+    #   langchain
+    #   langchain-community
+    #   llama-index
     #   onnxruntime
+    #   pandas
+    #   scikit-learn
+    #   scipy
+    #   sentence-transformers
+    #   transformers
 oauthlib==3.2.2
     # via
     #   kubernetes
     #   requests-oauthlib
 onnxruntime==1.16.3
     # via chromadb
+openai==1.10.0
+    # via llama-index
 opentelemetry-api==1.22.0
     # via
     #   chromadb
@@ -138,7 +247,14 @@ packaging==23.2
     # via
     #   build
     #   huggingface-hub
+    #   langchain-core
+    #   marshmallow
     #   onnxruntime
+    #   transformers
+pandas==2.2.0
+    # via llama-index
+pillow==10.2.0
+    # via sentence-transformers
 posthog==3.3.3
     # via chromadb
 protobuf==4.25.2
@@ -158,8 +274,14 @@ pydantic==2.5.3
     # via
     #   chromadb
     #   fastapi
+    #   langchain
+    #   langchain-core
+    #   langsmith
+    #   openai
 pydantic-core==2.14.6
     # via pydantic
+pypdf==4.0.1
+    # via leapfrogai-backend-rag (pyproject.toml)
 pypika==0.48.9
     # via chromadb
 pyproject-hooks==1.0.0
@@ -167,45 +289,111 @@ pyproject-hooks==1.0.0
 python-dateutil==2.8.2
     # via
     #   kubernetes
+    #   pandas
     #   posthog
 python-dotenv==1.0.1
-    # via uvicorn
+    # via
+    #   leapfrogai-backend-rag (pyproject.toml)
+    #   uvicorn
+python-multipart==0.0.6
+    # via leapfrogai-backend-rag (pyproject.toml)
+pytz==2023.4
+    # via pandas
 pyyaml==6.0.1
     # via
     #   chromadb
     #   huggingface-hub
     #   kubernetes
+    #   langchain
+    #   langchain-community
+    #   langchain-core
+    #   transformers
     #   uvicorn
+regex==2023.12.25
+    # via
+    #   nltk
+    #   tiktoken
+    #   transformers
 requests==2.31.0
     # via
     #   chromadb
     #   huggingface-hub
     #   kubernetes
+    #   langchain
+    #   langchain-community
+    #   langchain-core
+    #   langsmith
+    #   llama-index
     #   posthog
     #   requests-oauthlib
+    #   tiktoken
+    #   transformers
 requests-oauthlib==1.3.1
     # via kubernetes
 rsa==4.9
     # via google-auth
+safetensors==0.4.2
+    # via transformers
+scikit-learn==1.4.0
+    # via sentence-transformers
+scipy==1.12.0
+    # via
+    #   scikit-learn
+    #   sentence-transformers
+sentence-transformers==2.3.0
+    # via leapfrogai-backend-rag (pyproject.toml)
+sentencepiece==0.1.99
+    # via sentence-transformers
 six==1.16.0
     # via
     #   kubernetes
     #   posthog
     #   python-dateutil
 sniffio==1.3.0
-    # via anyio
+    # via
+    #   anyio
+    #   httpx
+    #   openai
+sqlalchemy[asyncio]==2.0.25
+    # via
+    #   langchain
+    #   langchain-community
+    #   llama-index
 starlette==0.35.1
     # via fastapi
 sympy==1.12
-    # via onnxruntime
+    # via
+    #   onnxruntime
+    #   torch
 tenacity==8.2.3
-    # via chromadb
+    # via
+    #   chromadb
+    #   langchain
+    #   langchain-community
+    #   langchain-core
+    #   llama-index
+threadpoolctl==3.2.0
+    # via scikit-learn
+tiktoken==0.5.2
+    # via
+    #   leapfrogai-backend-rag (pyproject.toml)
+    #   llama-index
 tokenizers==0.15.1
-    # via chromadb
+    # via
+    #   chromadb
+    #   transformers
+torch==2.1.2
+    # via sentence-transformers
 tqdm==4.66.1
     # via
     #   chromadb
     #   huggingface-hub
+    #   nltk
+    #   openai
+    #   sentence-transformers
+    #   transformers
+transformers==4.37.2
+    # via sentence-transformers
 typer==0.9.0
     # via chromadb
 typing-extensions==4.9.0
@@ -213,10 +401,21 @@ typing-extensions==4.9.0
     #   chromadb
     #   fastapi
     #   huggingface-hub
+    #   llama-index
+    #   openai
     #   opentelemetry-sdk
     #   pydantic
     #   pydantic-core
+    #   sqlalchemy
+    #   torch
     #   typer
+    #   typing-inspect
+typing-inspect==0.9.0
+    # via
+    #   dataclasses-json
+    #   llama-index
+tzdata==2023.4
+    # via pandas
 urllib3==2.1.0
     # via
     #   kubernetes
@@ -224,7 +423,7 @@ urllib3==2.1.0
 uvicorn[standard]==0.27.0
     # via
     #   chromadb
-    #   leapfrogai-backend-chromadb (pyproject.toml)
+    #   leapfrogai-backend-rag (pyproject.toml)
 uvloop==0.19.0
     # via uvicorn
 watchfiles==0.21.0
@@ -237,6 +436,8 @@ wrapt==1.16.0
     # via
     #   deprecated
     #   opentelemetry-instrumentation
+yarl==1.9.4
+    # via aiohttp
 zipp==3.17.0
     # via importlib-metadata
 
