--- a/zarf.yaml
+++ b/zarf.yaml
@@ -1,16 +1,29 @@
 kind: ZarfPackageConfig
 metadata:
   name: "###ZARF_PKG_TMPL_NAME###"
-  version: "###ZARF_PKG_TMPL_IMAGE_VERSION###"
+  version: "###ZARF_PKG_TMPL_PACKAGE_VERSION###"
   description: >
     rag backend + api
 constants:
   - name: IMAGE_VERSION
     value: "###ZARF_PKG_TMPL_IMAGE_VERSION###"
+  - name: PACKAGE_VERSION
+    value: "###ZARF_PKG_TMPL_PACKAGE_VERSION###"
   - name: NAME
     value: "###ZARF_PKG_TMPL_NAME###"
 
 components:
+  - name: rag
+    require: true
+    charts:
+      - name: rag
+        namespace: leapfrogai
+        localPath: chart
+        version: "###ZARF_PKG_TMPL_IMAGE_VERSION###"
+        valuesFiles:
+          - "chart/values.yaml"
+    images:
+      - "ghcr.io/defenseunicorns/leapfrogai/rag:###ZARF_PKG_TMPL_IMAGE_VERSION###"
   - name: import-model
     required: true
     import:
