--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -20,25 +20,25 @@ spec:
           imagePullPolicy: Always
           env:
           - name: OPENAI_API_BASE
-            value: {{ .Values.env.openai_api_base }}
+            value: {{ .Values.env.openaiApiBase }}
           - name: OPENAI_API_KEY
-            value: {{ .Values.env.openai_api_key }}
+            value: {{ .Values.env.openaiApiKey }}
           - name: MODEL
             value: {{ .Values.env.model }}
           - name: TEMPERATURE
             value: {{ .Values.env.temperature }}
           - name: CONTEXT_WINDOW
-            value: {{ .Values.env.context_window }}
+            value: {{ .Values.env.contextWindow }}
           - name: MAX_OUTPUT
-            value: {{ .Values.env.max_output }}
+            value: {{ .Values.env.maxOutput }}
           - name: CHUNK_SIZE
-            value: {{ .Values.env.chunk_size }}
+            value: {{ .Values.env.chunkSize }}
           - name: OVERLAP_SIZE
-            value: {{ .Values.env.overlap_size }}
+            value: {{ .Values.env.overlapSize }}
           - name: RESPONSE_MODE
-            value: {{ .Values.env.response_mode }}
+            value: {{ .Values.env.responseMode }}
           - name: SSL_VERIFICATION
-            value: {{ .Values.env.ssl_verification }}
+            value: {{ .Values.env.sslVerification }}
           ports:
             - containerPort: 8000
           livenessProbe:
