--- a/zarf.yaml
+++ b/zarf.yaml
@@ -11,11 +11,58 @@ constants:
     value: "###ZARF_PKG_TMPL_PACKAGE_VERSION###"
   - name: NAME
     value: "###ZARF_PKG_TMPL_NAME###"
+  - name: API_KEY
+    value: "dummy-key"
 
 variables:
   - name: PREFIX
     description: Prefix to proxy requests to the application
     default: ""
+    prompt: true
+    sensitive: false
+  - name: API_BASE
+    description: Base address for the chat API
+    default: "http://api.leapfrogai.svc.cluster.local:8080/openai/v1"
+    prompt: true
+    sensitive: false
+  - name: MODEL
+    description: Model to query when performing refining queries
+    default: "llamacpp"
+    prompt: true
+    sensitive: false
+  - name: TEMPERATURE
+    description: Temperature to use when performing refining queries
+    default: "0.2"
+    prompt: true
+    sensitive: false
+  - name: CONTEXT_WINDOW
+    description: Context window to use when performing refining queries
+    default: "8192"
+    prompt: true
+    sensitive: false
+  - name: MAX_OUTPUT
+    description: Max output to use when performing refining queries
+    default: "1024"
+    prompt: true
+    sensitive: false
+  - name: CHUNK_SIZE
+    description: Chunk size to use when chunking uploaded docs
+    default: "1024"
+    prompt: true
+    sensitive: false
+  - name: OVERLAP_SIZE
+    description: Overlap size to use when chunking uploaded docs
+    default: "20"
+    prompt: true
+    sensitive: false
+  - name: RESPONSE_MODE
+    description: Response mode to use when querying the vector store
+    default: "refine"
+    prompt: true
+    sensitive: false
+  - name: SSL_VERIFICATION
+    description: Should SSL connections be verified when performing refining queries
+    default: "False"
     prompt: true
     sensitive: false
 
