--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -6,7 +6,7 @@ rag:
 
 env:
   openaiApiBase: "###ZARF_VAR_API_BASE###"
-  openaiApiKey: "###ZARF_CONST_API_BASE###"
+  openaiApiKey: "###ZARF_CONST_API_KEY###"
   model: "###ZARF_VAR_MODEL###"
   temperature: "###ZARF_VAR_TEMPERATURE###"
   contextWindow: "###ZARF_VAR_CONTEXT_WINDOW###"
