--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,5 @@ CHUNK_SIZE=1024
 OVERLAP_SIZE=20
 RESPONSE_MODE=refine
 SSL_VERIFICATION=False
-PREFIX=""
+PREFIX=
+EMBEDDING_MODEL_NAME=WhereIsAI/UAE-Large-V1
