--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,6 @@ dependencies = [
     "pypdf>=4.0.1",
     "llama-index>=0.9.39",
     "python-dotenv>=1.0.1",
-    "langchain-community>=0.0.16"
+    "langchain-community>=0.0.16",
+    "unstructured==0.12.4"
 ]
