--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,5 +19,7 @@ dependencies = [
     "llama-index>=0.9.39",
     "python-dotenv>=1.0.1",
     "langchain-community>=0.0.16",
-    "unstructured==0.12.4"
+    "unstructured==0.12.4",
+    "openpyxl>=3.1.2",
+    "docx2txt>=0.8"
 ]
