--- a/zarf-config.yaml
+++ b/zarf-config.yaml
@@ -1,7 +1,7 @@
 package:
   create:
     set:
-      image_repository: "ghcr.io/defenseunicorns/leapfrogai/rag-server"
+      image_repository: "ghcr.io/defenseunicorns/leapfrogai/rag"
       image_version: 0.2.0
       package_version: 0.2.0
-      name: rag-server
+      name: rag
