update zarf variables

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1,5 +1,5 @@
 image:
-  lfaiRagTag: "###ZARF_PKG_TMPL_IMAGE_VERSION###"
+  lfaiRagTag: "###ZARF_CONST_IMAGE_VERSION###"
 
 rag:
   replicas: "1"
@@ -15,6 +15,7 @@ env:
   overlapSize: "###ZARF_VAR_OVERLAP_SIZE###"
   responseMode: "###ZARF_VAR_RESPONSE_MODE###"
   sslVerification: "###ZARF_VAR_SSL_VERIFICATION###"
+  prefix: "###ZARF_VAR_PREFIX###"
 
 package:
   host: leapfrogai-rag
